# investigraph-etl

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  investigraph-etl.code-workspace  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml  python.yml
contrib/: CLAUDE.md
docs/: index.md  install.md  tutorial.md
docs/concepts/: catalog.md  dataset.md  entity.md
docs/how-to/: index.md  keys.md  metadata.md  transform.md  utils.md
docs/reference/: archive.md  cache.md  cli.md  config.md  context.md  helpers.md  index.md  settings.md  source.md  types.md
docs/run/: actions.md  cli.md  docker.md  parallelization.md
docs/stack/: followthemoney.md
docs/stages/: export.md  extract.md  load.md  seed.md  transform.md
investigraph/: __init__.py  archive.py  cache.py  cli.py  pipeline.py  settings.py  types.py  util.py
investigraph/logic/: export.py  extract.py  load.py  seed.py  transform.py
investigraph/model/: config.py  context.py  mapping.py  source.py  stage.py
tests/: test_cli.py  test_extract.py  test_model_mapping.py  test_pipeline.py  test_seed.py  test_source.py  test_util.py
tests/fixtures/: config.seed.yml  custom.py  eu_authorities.custom.yml  eu_authorities.leveldb.yml
tests/fixtures/ec_meetings/: transform.py
tests/fixtures/eu_authorities/: custom.py  transform.py
