[project]
name = "investigraph"
version = "0.6.1"
description = "etl pipeline for investigations with follow the money data"
authors = [{ name = "Simon Wörpel", email = "simon.woerpel@pm.me" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11,<4"
dependencies = [
    "anystore @ file:///home/elliot/Projects/anystore",
    "ftmq (>=0.8.5,<0.9.0)",
    "runpandarun (>=0.5.5,<0.6.0)",
    "dateparser (>=1.2.1,<2.0.0)",
]

[project.optional-dependencies]
sql = ["sqlalchemy (>=2.0.36,<3.0.0)"]
postgres = ["sqlalchemy (>=2.0.36,<3.0.0)", "psycopg2 (>=2.9.10,<3.0.0)"]
redis = ["redis (>=4.0.0)"]
level = ["plyvel (>=1.5.1,<2.0.0)"]

[project.scripts]
investigraph = "investigraph.cli:cli"

[project.urls]
Homepage = "https://investigraph.dev"
Repository = "https://github.com/dataresearchcenter/investigraph-etl"
Documentation = "https://docs.investigraph.dev"
Issues = "https://github.com/dataresearchcenter/investigraph-etl/issues"

[tool.poetry.group.dev.dependencies]
pytest-env = ">=1.1.1"
pytest = ">=7.4.3,<9.0.0"
pytest-cov = ">=4.1,<7.0"
black = ">=23.11,<25.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = ">=3.5,<5.0"
flake8 = ">=6.1,<8.0"
bump2version = "^1.0.1"
mkdocs-material = "^9.6.13"
mkdocs-autorefs = "^1.4.1"
mkdocstrings-python = "^1.16.10"
griffe-pydantic = "^1.1.0"
mkdocs-typer = "^0.0.3"
mkdocs = "^1.6.1"


[tool.poetry.dependencies]
anystore = { develop = true }
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
DEBUG = 1
INVESTIGRAPH_DATA_ROOT = ".test"
NOMENKLATURA_DB_URL = "sqlite:///:memory:"
